# smolagents-ai-boilerplate

./: .env.example  .gitignore  README.md  pyproject.toml
src/ai_assistant/: main.py
src/ai_assistant/agents/: base.py  clinic_info_agent.py  manager.py  web_agent.py
src/ai_assistant/agents/tools/: __init__.py  clinic_appointments.py  clinic_general_info.py  clinic_pricing.py  clinic_services.py  clinic_staff.py  clinick_knowledge.py
src/ai_assistant/api/: router.py
src/ai_assistant/config/: settings.py
src/ai_assistant/database/: migrations.py  supabase_client.py
src/ai_assistant/prompts/: clinic_info.py  manager.py
src/ai_assistant/utils/: file_handler.py
